2023-10-19T01:12:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6568515614 # 1267
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-19
* notice: last 14d: unq all: 7 23
* notice: prev accum: outdated-unq outdated-all / unq all: 267 910 / 275 937
* notice: next accum: outdated-unq outdated-all / unq all: 268 914 / 275 937
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-10-04] / []

2023-10-17T16:22:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6550044366 # 1263
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-17
* notice: last 14d: unq all: 8 27
* notice: prev accum: outdated-unq outdated-all / unq all: 267 910 / 273 927
* notice: next accum: outdated-unq outdated-all / unq all: 267 910 / 275 937
* notice: prev exec diff / last date diff / accum: unq all: +2 +10 -0 -0 / +2 +10 -0 -0 / 2 10
* notice: removed / changed dates: [] / [2023-10-17]

2023-10-11T16:21:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6485296813 # 1245
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-11
* notice: last 14d: unq all: 6 17
* notice: prev accum: outdated-unq outdated-all / unq all: 264 881 / 272 925
* notice: next accum: outdated-unq outdated-all / unq all: 267 910 / 273 927
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2023-09-27] / [2023-10-11]

2023-10-11T01:11:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6476687070 # 1243