@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-19T01:12:04Z",
-  "count_outdated" : 914,
-  "uniques_outdated" : 268,
-  "count" : 937,
-  "uniques" : 275,
+  "timestamp" : "2023-10-20T16:21:22Z",
+  "count_outdated" : 916,
+  "uniques_outdated" : 269,
+  "count" : 941,
+  "uniques" : 276,
   "views" : [
-    {
-      "timestamp": "2023-10-06T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-10-09T00:00:00Z",
       "count": 2,
@@ -49,6 +40,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-10-20T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
+      "count_decinc": [ 0, 4 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
