@@ -1,12 +1,7 @@
 {
-  "count": 23,
+  "count": 25,
   "uniques": 7,
   "views": [
-    {
-      "timestamp": "2023-10-06T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-10-09T00:00:00Z",
       "count": 2,
@@ -26,6 +21,11 @@
       "timestamp": "2023-10-17T00:00:00Z",
       "count": 10,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-10-20T00:00:00Z",
+      "count": 4,
+      "uniques": 1
     }
   ]
 }
